# fand

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  cliff.toml  deny.toml  flake.nix  lefthook.yml  rust-toolchain.toml  sonar-project.properties
.cargo/: mutants.toml
.github/: CODEOWNERS  dependabot.yml  og-card.html  zizmor.yml
.github/workflows/: ci.yml  codeql.yml  miri.yml  nightly.yml  no-ai-slips.yml  osv-scanner.yml  release.yml  scorecard.yml  sonar.yml
benches/: write_latency.rs
docs/: ARCHITECTURE.md  RESEARCH.md  SECURITY.md  SMC-PROTOCOL.md
docs/assets/: fand-demo.cast
docs/schemas/: dry-run-v1.json  run-tick-v1.json  selftest-v1.json
nix/: module.nix  package.nix
nix/sandbox-profiles/: fand-set.sb
scripts/: extract-standalone.sh  marketing-apply-repo-metadata.sh  run-mutants.sh  sign-release.sh  verify-reproducible-build.sh
src/: correlation.rs  lib.rs  log.rs  main.rs  security.rs
src/cli/: curve_cmd.rs  force.rs  help.rs  keys.rs  mod.rs  parse.rs  probe.rs  reload.rs  run.rs  selftest.rs  set.rs  show.rs  status.rs  validate.rs  version.rs
src/config/: load.rs  mod.rs  reload.rs  schema.rs  validate.rs
src/control/: adapter.rs  curve.rs  ema.rs  fusion.rs  hysteresis.rs  loop.rs  mod.rs  panic.rs  slew.rs  state.rs
src/iohid/: mod.rs  sensors.rs
src/ipc/: mod.rs  protocol.rs  socket.rs
src/launchd/: gcd.rs  mod.rs
src/smc/: cache.rs  edr_detect.rs  enumerate.rs  ffi.rs  keys.rs  mod.rs  panic_hook.rs  round_trip.rs  selftest.rs  signal.rs  single_instance.rs  sleep.rs  types.rs  unlock.rs  write_session.rs
supply-chain/: audits.toml
tests/: compile_fail.rs  config_validation.rs  contract_cli_set.rs  contract_exit_codes.rs  curve_eval.rs  ema.rs  fusion.rs  golden_pipeline.rs  golden_selftest.rs  hysteresis.rs  integration_curve.rs  integration_dry_run.rs  integration_run.rs  live_smc_write.rs  loom_teardown.rs  panic_check.rs  pipeline_properties.rs  proptest_clamp.rs  proptest_curve_eval.proptest-regressions  proptest_curve_eval.rs  proptest_decoders.rs  proptest_ring.rs  proptest_sensor.rs  slew.rs  soak.sh  soak_run.sh
tests/fixtures/: golden_selftest_report.json  golden_ticks.json  test-curve.toml
tests/ui/: clamped_rpm_no_field_construct.rs  clamped_rpm_no_field_construct.stderr  smc_error_non_exhaustive.rs  smc_error_non_exhaustive.stderr  writable_key_no_inner_match.rs  writable_key_no_inner_match.stderr  writable_key_no_tuple_construct.rs  writable_key_no_tuple_construct.stderr  write_session_no_clone.rs  write_session_no_clone.stderr  write_session_no_copy.rs  write_session_no_copy.stderr
